tests/golden/err-dup-impl/expected_error.txt
error: 定義 `Greet` の実装が複数あります（1定義=1実装）
 --> main.clum:3:5
  |
3 | yo: Greet name -> name
  |     ^^^^^ 最初の実装は2行目です
